update tips and agenda model

--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -75,8 +75,8 @@
     <div id="toprow">Game 3</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="XXXX"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Team 1</div>
+        <div class="teamImgContainer" id="pacersIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Pacers</div>
       </div>
       <div id="midpanel">
         <img id="sportsIcon" src="{% static 'icons/tipsBasketballBlue.svg' %}">
@@ -84,8 +84,8 @@
         <div  id="dateContainer">4/19</div>
       </div>
       <div id="rightpanel">
-        <div class="teamImgContainer"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Team 2</div>
+        <div class="teamImgContainer" id="celticsIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Celtics</div>
       </div>
     </div>
     <div class="yellowBorder" id="submitrow"> {{form.game3 }} </div>
@@ -96,17 +96,17 @@
     <div id="toprow">Game 4</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="XXXX"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Team 1</div>
+        <div class="teamImgContainer" id="nuggetsIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Nuggets</div>
       </div>
       <div id="midpanel">
         <img id="sportsIcon" src="{% static 'icons/tipsBasketballBlue.svg' %}">
         <div class="indyText blueText" id="vsContainer">VS</div>
-        <div  id="dateContainer">4/19</div>
+        <div  id="dateContainer">4/20</div>
       </div>
       <div id="rightpanel">
-        <div class="teamImgContainer"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Team 2</div>
+        <div class="teamImgContainer" id="spursIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Spurs</div>
       </div>
     </div>
     <div class="yellowBorder" id="submitrow"> {{form.game4 }} </div>
