--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -75,7 +75,7 @@
     <div id="toprow">Game 3</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="pacersIMG"></div>
+        <div class="teamImgContainer" id="giantsIMG"></div>
         <div class="indyText blueText bold" id="teamTextContainer">Pacers</div>
       </div>
       <div id="midpanel">
@@ -109,7 +109,7 @@
         <div class="indyText blueText bold" id="teamTextContainer">Spurs</div>
       </div>
     </div>
-    <div class="yellowBorder" id="submitrow"> {{form.game4 }} </div>
+    <div class="yellowBorder" id="submitrow"> {{ form.game4 }} </div>
   </div>
 
   <!--Game 5 -->
