--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -1293,7 +1293,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #pacersIMG {
-  background-image: url(https://media3.giphy.com/media/3RxaetKNiSE4o/giphy.gif);
+  background-image: url(https://thumbs.gfycat.com/FamousConcreteArmedcrab-size_restricted.gif);
   background-position: 50% 50%;
   background-size: 150px;
   background-repeat: no-repeat;
