--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -75,7 +75,7 @@
     <div id="toprow">Game 3</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="giantsIMG"></div>
+        <div class="teamImgContainer" id="pacersIMG"></div>
         <div class="indyText blueText bold" id="teamTextContainer">Pacers</div>
       </div>
       <div id="midpanel">
