--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -1301,21 +1301,21 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #celticsIMG {
-  background-image: url(https://media3.giphy.com/media/3RxaetKNiSE4o/giphy.gif);
+  background-image: url(http://25.media.tumblr.com/1f95f4f906eaca6419f9452607cf68b2/tumblr_mgouyq6HEN1s2gg27o1_500.gif);
   background-position: 50% 50%;
   background-size: 150px;
   background-repeat: no-repeat;
 }
 
 #nuggetsIMG {
-  background-image: url(https://media3.giphy.com/media/3RxaetKNiSE4o/giphy.gif);
+  background-image: url(https://media.giphy.com/media/VRQez3CAXEqQg/giphy.gif);
   background-position: 50% 50%;
   background-size: 150px;
   background-repeat: no-repeat;
 }
 
 #spursIMG {
-  background-image: url(https://media3.giphy.com/media/3RxaetKNiSE4o/giphy.gif);
+  background-image: url(https://cdn.vox-cdn.com/uploads/chorus_asset/file/3052162/tim_whi.0.gif);
   background-position: 50% 50%;
   background-size: 150px;
   background-repeat: no-repeat;
