--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -33,8 +33,8 @@
     <div id="toprow">Game 1</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="XXXX"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Player 1 Name</div>
+        <div class="teamImgContainer" id="djIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Jordan Speith</div>
       </div>
       <div id="midpanel">
         <img id="sportsIcon" src="{% static 'icons/tipsGolfBlue.svg' %}">
@@ -42,8 +42,8 @@
         <div  id="dateContainer">4/19</div>
       </div>
       <div id="rightpanel">
-        <div class="teamImgContainer"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Player 2 Name</div>
+        <div class="teamImgContainer" id="jsIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Dustin Johnson</div>
       </div>
     </div>
     <div class="yellowBorder" id="submitrow"> {{form.game1 }} </div>
