update media sizing

--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -34,7 +34,7 @@
     <div id="corerow">
       <div id="leftpanel">
         <div class="teamImgContainer" id="jsIMG"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Speith</div>
+        <div class="indyText blueText bold" id="teamTextContainer">Spieth</div>
       </div>
       <div id="midpanel">
         <img id="sportsIcon" src="{% static 'icons/tipsGolfBlue.svg' %}">
