--- a/catalog/templates/tourAgenda.html
+++ b/catalog/templates/tourAgenda.html
@@ -31,7 +31,7 @@
         <div class= "indyText blueText" id="timeContainer">{{ event.time }}</div>
         <div id="eventContainer">
             <div class="indyText blueText" id="eventDetails">{{ event.event }}</div>
-            <div id="locationDetails">{{ event.locations }}</div>
+            <div id="locationDetails">{{ event.location }}</div>
             {% if event.total_points > 0 %}
             <div class="indyText blueBorder2 yellowBackground blueText" id="eventPoints">{{ event.total_points }}<span style="font-size: 0.5rem; color: white">pts</span></div>
             {% endif %}
