--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -2038,9 +2038,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
-/*
-@media only screen and (min-width: 1200px) {
-#  #bodyContentContainer {
+@media only screen and (min-width: 1100px) {
+#bodyContentContainer {
     height: 900px;
   }
-}*/
+}
