--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -2038,12 +2038,42 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /*DESKTOP RESPONSIVE*/
+@media only screen and (min-width: 750px) {
+#bodyContentContainer {
+    height: 5500px;
+    padding-top: 20px;
+  }
+
+#fullLeaderboardScrollContainer,#scoringScrollContainer, #tipsScrollContainer, #socialScrollContainer, #fullscreenScrollContainer{
+    height: 500px;
+}
+
+#scoreScrollContainer {
+    height: 320px;
+}
+
+#round1Leaderboard {
+  height: 350px;
+}
+
+}
+
 @media only screen and (min-width: 1100px) {
 #bodyContentContainer {
-    height: 700px;
+    height: 600px;
     padding-top: 25px;
   }
 
-#fullLeaderboardScrollContainer,#scoringScrollContainer, #scoreScrollContainer, #tipsScrollContainer, #socialScrollContainer, #fullscreenScrollContainer{
-    height: 500px;
+#fullLeaderboardScrollContainer,#scoringScrollContainer, #tipsScrollContainer, #socialScrollContainer, #fullscreenScrollContainer{
+    height: 550px;
+}
+
+#scoreScrollContainer {
+    height: 370px;
+}
+
+#round1Leaderboard {
+  height: 400px;
+}
+
 }
