--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -787,6 +787,7 @@ input[type=number]::-webkit-outer-spin-button {
   left: 94px;
   height: 30px;
   width: 190px;
+  z-index: 100;
 }
 
 #ctpLabelContainer {
