--- a/catalog/templates/scoringPage.html
+++ b/catalog/templates/scoringPage.html
@@ -19,10 +19,11 @@
     <div class="bold bigText whiteText" id="scorespageTextContainer">Prairie View</div>
     </div>
 
+  <a href="{% url 'racing'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonRacing">
     <div id="scorespageIconContainer"><img class="scoresIconImage" id="scoresIconRacing" src="{% static 'icons/scoresRacingWhite.svg' %}"></div>
     <div class="bold bigText whiteText" id="scorespageTextContainer">Go Karting</div>
-    </div>
+  </div></a>
 
   <a href="{% url 'entertips'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonTipping">
@@ -30,10 +31,11 @@
     <div class="bold bigText whiteText" id="scorespageTextContainer">Sports Tipping</div>
   </div></a>
 
+  <a href="{% url 'topgolf'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonTopGolf">
     <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresTopGolfWhite.svg' %}"></div>
     <div class="bold bigText whiteText" id="scorespageTextContainer">Top Golf</div>
-  </div>
+  </div></a>
 
   <a href="{% url 'entersocial'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonSocial">
