--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -160,6 +160,7 @@ a:link {
 
 #bodyContentContainer {
   height: 450px;
+  border: 1px solid lightgrey;
   padding: 10px;
 }
 /* NOTE bodyContentContainer needs updating for media*/
@@ -208,7 +209,7 @@ a:link {
 }
 
 #loginBody {
-  height: 48.5%;
+  height: 43%;
   width: 100%;
 
 }
@@ -229,26 +230,27 @@ a:link {
   height: 35%;
   width: 100%;
   text-align: center;
-  line-height: 65px;
+  line-height: 85px;
   font-size: 3rem;
 
 }
 
 #loginAuthContainer {
-  height: 40%;
+  height: 20%;
   width: 80%;
   background-color: white;
   border-radius: 10px;
-  background-color: #F2F2F2;
+  /*background-color: #F2F2F2;*/
   margin: 0 auto;
   text-transform: none;
-  color: lightgrey;
+  color: grey;
   text-align: center;
-  line-height: 50px;
+  line-height: 35px;
+  font-weight: normal;
 }
 
 #loginFooter {
-  height: 20%;
+  height: 25%;
   width: 100%;
   border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
@@ -264,7 +266,7 @@ a:link {
   margin-top: 15px;
   color: white;
   text-align: center;
-  line-height: 37px;
+  line-height: 45px;
 }
 
 #adminButton {
@@ -787,7 +789,6 @@ input[type=number]::-webkit-outer-spin-button {
   left: 94px;
   height: 30px;
   width: 190px;
-  z-index: 100;
 }
 
 #ctpLabelContainer {
@@ -1237,7 +1238,6 @@ input[type=number]::-webkit-outer-spin-button {
   height: 16%;
   width: 99%;
   margin: 0 auto;
-  padding-left: 85px;
   padding-top:2px;
   border-radius: 10px;
   background-color: white;
@@ -1272,26 +1272,10 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 1.1rem;
   text-transform: uppercase;
   color: #051864;
-  width: 100px;
+  width: 16d0px;
+  display: block;
   margin: 0 auto;
   }
-
-#jsIMG {
-  background-image: url(https://media1.tenor.com/images/2c4d7ef7bb46fcf376b73fcc43662cbd/tenor.gif?itemid=9044317);
-  background-position: 50% 50%;
-  background-size: 150px;
-  background-repeat: no-repeat;
-
-}
-
-#djIMG {
-  background-image: url(https://media.giphy.com/media/I6MFNwVACDVC0/giphy.gif);
-  background-position: 50% 50%;
-  background-size: 150px;
-  background-repeat: no-repeat;
-
-}
-
 
 #giantsIMG {
   background-image: url(https://media3.giphy.com/media/3RxaetKNiSE4o/giphy.gif);
@@ -1560,17 +1544,17 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #socialFormContainer {
-  height: 220px;
+  height: 325px;
   width: 90%;
   margin: 5px auto;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   text-align: center;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
+
 }
 
 #socialFormHeader {
-  height: 25%;
+  height: 75px;
   width: 100%;
   color: white;
   border-top-left-radius: 10px;
@@ -1578,9 +1562,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #socialTopText {
-  height: 30px;
+  height: 40px;
   width: 100%;
-  line-height: 40px;
+  line-height: 60px;
   font-size: 1.5rem;
 }
 
@@ -1590,7 +1574,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #socialFormBody {
-  height: 135px;
+  height: 175px;
   width: 100%;
   background-color: white;
 }
@@ -1611,16 +1595,27 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 #yourNameInstructions, #yourPwdInstructions {
-  height: 50%;
+  height: 40px;
   width: 100%;
   text-align: left;
-  line-height: 25px;
+  line-height: 40px;
   font-size: 1.15rem;
 }
 
+#bestInstructions, #honorableInstructions {
+  height: 35px;
+  width: 100%;
+  text-align: left;
+  line-height: 35px;
+  font-size: 1.15rem;
+  margin: 2px 0;
+}
+
+/* Friday form */
+
 #id_friday-name, #id_friday-password {
   background-color: #F2F2F2;
-  height: 27px;
+  height: 37px;
   width: 100%;
   text-align: left;
   margin: 1px 0px;
@@ -1630,22 +1625,14 @@ input[type=number]::-webkit-outer-spin-button {
   padding-left: 5px;
   color: #051864;
   font-weight: BOLD;
-}
-
-#bestInstructions, #honorableInstructions {
-  height: 50%;
-  width: 100%;
-  text-align: left;
-  line-height: 29px;
-  font-size: 1.15rem;
-  margin: 1px 0px;
+  border-radius: 5px;
 }
 
 #id_friday-best, #id_friday-honorable {
-  height: 28px;
+  height: 35px;
   width: 100%;
   text-align: left;
-  margin: 1px 0px;
+  margin: 2px 0px;
   -webkit-appearance: none;
   border: 0;
   text-align: center;
@@ -1665,9 +1652,14 @@ input[type=number]::-webkit-outer-spin-button {
   color: #051864;
 }
 
+/* End Friday form */
+
+/* Start Saturday form */
+
+
 #id_saturday-name, #id_saturday-password {
   background-color: #F2F2F2;
-  height: 27px;
+  height: 37px;
   width: 100%;
   text-align: left;
   margin: 1px 0px;
@@ -1677,22 +1669,14 @@ input[type=number]::-webkit-outer-spin-button {
   padding-left: 5px;
   color: #051864;
   font-weight: BOLD;
-}
-
-#bestInstructions, #honorableInstructions {
-  height: 50%;
-  width: 100%;
-  text-align: left;
-  line-height: 29px;
-  font-size: 1.15rem;
-  margin: 1px 0px;
+  border-radius: 5px;
 }
 
 #id_saturday-best, #id_saturday-honorable {
-  height: 28px;
+  height: 35px;
   width: 100%;
   text-align: left;
-  margin: 1px 0px;
+  margin: 2px 0px;
   -webkit-appearance: none;
   border: 0;
   text-align: center;
@@ -1712,17 +1696,21 @@ input[type=number]::-webkit-outer-spin-button {
   color: #051864;
 }
 
+/* End Saturday form */
+
 #socialFormSubmit {
-  height: 35px;
+  height: 75px;
   width: 100%;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 #socialSubmitButton {
-  height: 30px;
+  height: 40px;
   width: 100px;
   border-radius: 20px;
   border: 2px solid white;
-  margin-top: 2px;
+  margin-top: 20px;
 }
 
 #socialSubmitIcon {
@@ -2034,6 +2022,96 @@ input[type=number]::-webkit-outer-spin-button {
 
   text-align: center;
   line-height: 15px;
+}
+
+/* START TOP GOLF */
+
+#topGolfContainer {
+  min-height: 400px;
+  width: 95%;
+  margin: 10px auto;
+  border-radius: 20px;
+}
+
+#topGolfHeader {
+  height: 90px;
+  width: 100%;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  position: relative;
+}
+
+#topGolfHeaderTextTop {
+  height: 55px;
+  width: 100%;
+  text-align: center;
+  line-height: 80px;
+  font-size: 2.5rem;
+}
+
+#topGolfheaderTextBottom {
+  font-weight: bold;
+  text-align: center;
+}
+
+#topGolfBody {
+  min-height: 220px;
+  width: 100%;
+
+  padding: 5px 0;
+}
+
+#topGolfResultRow {
+  height: 65px;
+  width: 95%;
+  margin: 7px AUTO;
+  padding: 5px;
+
+}
+
+.topGolfImage {
+  width: 55px;
+  height: 55px;
+  background-color: #f2f2f2;
+  border-radius: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#topGolfText {
+  width: 80px;
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 55px;
+  padding-left: 5px;
+
+}
+
+#topGolfForm {
+  width: 130px;
+  height: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 55px;
+  margin-left: 10px;
+
+}
+
+#topGolfFooter {
+  height: 90px;
+  width: 100%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding-top: 20px;
+}
+
+#topGolfBackButton{
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
+  border-radius: 100%;
 }
 
 
