--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -31,7 +31,7 @@ Indy1200 | login
       <div id="loginIconContainer">
       <img id="loginIcon" src="{% static 'icons/tourdetailsFlagBlue.svg' %}"></div>
       <div class="indyText blueText" id="loginTextContainer">The Indy<span id="loginTextContainer" class="indyText yellowText">1200</span></div>
-      <div id="loginAuthContainer">Player auth here</div>
+      <div id="loginAuthContainer">Indianapolis, April 19-21 2019</div>
     </div>
 
     <div class="yellowBackground" id="loginFooter">
