--- a/catalog/templates/fullLeaderboard.html
+++ b/catalog/templates/fullLeaderboard.html
@@ -31,5 +31,10 @@
 {% else %}
 <div id= "noscorePlaceholder">No scores entered yet</div>
 {% endif %}
-</div></div>
+
+
+
+</div>
+Score: {% loaded_points %}
+</div>
 {% endblock %}
