test for points addition on leaderboard

--- a/catalog/templates/fullLeaderboard.html
+++ b/catalog/templates/fullLeaderboard.html
@@ -35,6 +35,7 @@
 
 
 </div>
-Score: {% loaded_points %}
+<div id="leaderboardTotalPoints" style="color: lightgrey; font-size: 0.8rem">Total points: {{ loaded_points }}</div>
+<div id="leaderboardTotalPoints" style="color: lightgrey; font-size: 0.8rem">Points awarded: {{ awarded_points }}</div>
 </div>
 {% endblock %}
