Fix sports tipping results

--- a/catalog/templates/tipResults.html
+++ b/catalog/templates/tipResults.html
@@ -3,6 +3,8 @@
 {% block content %}
 {% load static %}
 
+<div id="fullscreenScrollContainer">
+
 <div id="resultsTile" class="bigShadow">
   <div id="resultsHeader" class="yellowBackground">
     <div id="indyResultsHeader" class="indyText blueText">Indy1200</div>
@@ -34,6 +36,6 @@ No recorded tips
 
 {% endif %}
 
-</div>
+</div></div>
 
 {% endblock %}
