Add golf round 2

--- a/catalog/templates/scoringPage.html
+++ b/catalog/templates/scoringPage.html
@@ -9,10 +9,11 @@
   <div class="bold bigText whiteText" id="scorespageTextContainer">Brickyard Crossing</div>
 </div></a>
 
+<a href="{% url 'rd2holelist' %}">
 <div class="bigShadow scorepageButton" id="scorespageButtonRd2">
   <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresGolfWhite.svg' %}"></div>
   <div class="bold bigText whiteText" id="scorespageTextContainer">Crooked Stick GC</div>
-  </div>
+</div></a>
 
   <div class="bigShadow scorepageButton" id="scorespageButtonRd3">
     <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresGolfWhite.svg' %}"></div>
