Add round 3 details

--- a/catalog/templates/scoringPage.html
+++ b/catalog/templates/scoringPage.html
@@ -15,10 +15,11 @@
   <div class="bold bigText whiteText" id="scorespageTextContainer">Crooked Stick GC</div>
 </div></a>
 
+  <a href="{% url 'rd3holelist' %}">
   <div class="bigShadow scorepageButton" id="scorespageButtonRd3">
     <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresGolfWhite.svg' %}"></div>
     <div class="bold bigText whiteText" id="scorespageTextContainer">Prairie View</div>
-    </div>
+  </div></a>
 
   <a href="{% url 'racing'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonRacing">
