test leaderboard css

--- a/catalog/templates/rd1HoleList.html
+++ b/catalog/templates/rd1HoleList.html
@@ -4,7 +4,7 @@
 {% load static %}
 <a href="{% url 'rd1leaderboard' %}">
 <div class="yellowBackground bigShadow indyText blueText" id="checkRoundLeaderboard">
-  Show leaderboard
+  Show <span class="indyText whiteText">Rd 1</span> leaderboard
 </div></a>
 
 <div class="yellowBorder bigShadow" id="rd1HoleList">
