--- a/catalog/templates/rd3Leaderboard.html
+++ b/catalog/templates/rd3Leaderboard.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 <div class="yellowBackground indyText blueText" id="round1LeaderboardHeader">
-  Leaderboard
+  <span class="indyText whiteText" style="font-size: 1.75rem">Rd 3</span> leaderboard
 </div></a>
 <div class="" id="round1Leaderboard">
   <div id="leaderboardHeaderRow" class="blueBackground whiteText">
