--- a/catalog/templates/rd1HoleList.html
+++ b/catalog/templates/rd1HoleList.html
@@ -4,7 +4,7 @@
 {% load static %}
 <a href="{% url 'rd1leaderboard' %}">
 <div class="yellowBackground bigShadow indyText blueText" id="checkRoundLeaderboard">
-  Show <span class="indyText whiteText">Rd 1</span> leaderboard
+  <span class="indyText whiteText" style="font-size: 1.75rem">Rd 1</span> leaderboard
 </div></a>
 
 <div class="yellowBorder bigShadow" id="rd1HoleList">
@@ -31,7 +31,7 @@
     {% else %}
     {% endif %}
 
-    <div class="blueText bold" id="rd1ScorecardLink">Course scorecard</div>
+    <div class="ScorecardLink" id="rd1ScorecardLink">Course scorecard</div>
 
 
 
