--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -678,6 +678,7 @@ a:link {
   width: 130px;
   border-radius: 20px;
   border: 2px solid #F8C145;
+  background-color: #F2F2F2;
   font-size: 1rem;
   line-height: 57px;
   float: left;
@@ -688,10 +689,10 @@ a:link {
 #rd1ScorecardLink {
   background-image:
     linear-gradient(170deg,
-    rgba(5, 159, 255, 0.1),
-    rgba(0, 10, 22, 0.6)),
-    url(https://media1.tenor.com/images/33ffa1dea5bb4f374b535edff271a409/tenor.gif?itemid=5467302);
-  background-position: 0% 40%;
+    rgba(5, 24, 100, 0.3),
+    rgba(5, 24, 100, 0.9)),
+    url(https://golfadvisor.brightspotcdn.com/dims4/default/de6b22e/2147483647/strip/true/crop/604x390+0+32/resize/930x600!/quality/90/?url=https%3A%2F%2Fgolfadvisor.brightspotcdn.com%2F36%2F6c%2F381b3339e6a7b4787433bd51d2c7%2F61623.jpg);
+  background-position: 50% 50%;
 }
 
 #rd2ScorecardLink {
