--- a/catalog/templates/rd1HoleList.html
+++ b/catalog/templates/rd1HoleList.html
@@ -31,7 +31,8 @@
     {% else %}
     {% endif %}
 
-    <div class="ScorecardLink" id="rd1ScorecardLink">Course scorecard</div>
+    <a href="https://offcourse.co/courses/scorecard/brickyard-crossing-golf-course" target="_blank">
+    <div class="ScorecardLink" id="rd1ScorecardLink">Course scorecard</div></a>
 
 
 
