--- a/catalog/templates/rd2HoleList.html
+++ b/catalog/templates/rd2HoleList.html
@@ -31,7 +31,8 @@
     {% else %}
     {% endif %}
 
-    <div class="ScorecardLink" id="rd2ScorecardLink">Course scorecard</div>
+    <a href="https://www.crookedstick.org/Crooked-Stick-Course-Tour.aspx" target="_blank">
+    <div class="ScorecardLink" id="rd2ScorecardLink">Course scorecard</div></a>
 
 
 
