--- a/catalog/templates/rd3HoleList.html
+++ b/catalog/templates/rd3HoleList.html
@@ -31,10 +31,8 @@
     {% else %}
     {% endif %}
 
-    <div class="ScorecardLink" id="rd2ScorecardLink">Course scorecard</div>
-
-
-
+    <a href="http://www.prairieviewgolf.com/course/scorecard/" target="_blank">
+    <div class="ScorecardLink" id="rd2ScorecardLink">Course scorecard</div></a>
 
     </div>
 {% endblock %}
