change scorecard link to white

--- a/catalog/templates/rd1HoleList.html
+++ b/catalog/templates/rd1HoleList.html
@@ -32,7 +32,7 @@
     {% endif %}
 
     <a href="https://offcourse.co/courses/scorecard/brickyard-crossing-golf-course" target="_blank">
-    <div class="ScorecardLink" id="rd1ScorecardLink">Course scorecard</div></a>
+    <div class="ScorecardLink blueText" id="rd1ScorecardLink">Course scorecard</div></a>
 
 
 
