--- a/catalog/templates/rd2HoleList.html
+++ b/catalog/templates/rd2HoleList.html
@@ -32,7 +32,7 @@
     {% endif %}
 
     <a href="https://www.crookedstick.org/Crooked-Stick-Course-Tour.aspx" target="_blank">
-    <div class="ScorecardLink" id="rd2ScorecardLink">Course scorecard</div></a>
+    <div class="ScorecardLink blueText" id="rd2ScorecardLink">Course scorecard</div></a>
 
 
 
