--- a/catalog/templates/rd3HoleList.html
+++ b/catalog/templates/rd3HoleList.html
@@ -32,7 +32,7 @@
     {% endif %}
 
     <a href="http://www.prairieviewgolf.com/course/scorecard/" target="_blank">
-    <div class="ScorecardLink" id="rd3ScorecardLink">Course scorecard</div></a>
+    <div class="ScorecardLink blueText" id="rd3ScorecardLink">Course scorecard</div></a>
 
     </div>
 {% endblock %}
