--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -683,14 +683,13 @@ a:link {
   line-height: 57px;
   float: left;
   font-weight: bold;
-  color: white;
 }
 
 #rd1ScorecardLink {
   background-image:
     linear-gradient(170deg,
-      rgba(255, 255, 255, 0.4),
-      rgba(255, 255, 255, 0.7)),
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.9)),
     url(https://golfadvisor.brightspotcdn.com/dims4/default/de6b22e/2147483647/strip/true/crop/604x390+0+32/resize/930x600!/quality/90/?url=https%3A%2F%2Fgolfadvisor.brightspotcdn.com%2F36%2F6c%2F381b3339e6a7b4787433bd51d2c7%2F61623.jpg);
   background-position: 50% 50%;
   background-size: cover;
@@ -699,8 +698,8 @@ a:link {
 #rd2ScorecardLink {
   background-image:
     linear-gradient(170deg,
-    rgba(255, 255, 255, 0.4),
-    rgba(255, 255, 255, 0.7)),
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.9)),,
     url(https://media.golfdigest.com/photos/5856c2cf2991c6d81317ebd3/master/w_768/2017-93-Crooked-Stick-GC-hole-11.jpg);
   background-position: 50% 50%;
   background-size: cover;
@@ -709,8 +708,8 @@ a:link {
 #rd3ScorecardLink {
   background-image:
     linear-gradient(170deg,
-      rgba(255, 255, 255, 0.4),
-      rgba(255, 255, 255, 0.7)),
+      rgba(255, 255, 255, 0.9),
+      rgba(255, 255, 255, 0.9)),
     url(https://www.rejournals.com/rejournals/media/RE-archives/Prairie-View-Golf-Club-0293.jpg?maxsidesize=300);
   background-position: 50% 50%;
   background-size: cover;
