--- a/catalog/templates/scoringPage.html
+++ b/catalog/templates/scoringPage.html
@@ -27,7 +27,7 @@
     <div class="bold bigText whiteText" id="scorespageTextContainer">Go Karting</div>
   </div></a>
 
-  <a href="{% url 'entertips'%}">
+  <a href="{% url 'tipresults'%}">
   <div class="bigShadow scorepageButton" id="scorespageButtonTipping">
     <div id="scorespageIconContainer"><img class="scoresIconImage" src="{% static 'icons/scoresTippingWhite.svg' %}"></div>
     <div class="bold bigText whiteText" id="scorespageTextContainer">Sports Tipping</div>
