--- a/catalog/templates/tipResults.html
+++ b/catalog/templates/tipResults.html
@@ -36,6 +36,10 @@ No recorded tips
 
 {% endif %}
 
-</div></div>
+</div>
+<div id="backToTipEntry" class="blueBackground yellowBorder2">
+  <img src="{% static 'icons/holeDetailBackYellow.svg'%}">
+</div>
+</div>
 
 {% endblock %}
