Final updates for tipping comp

--- a/catalog/templates/tipResults.html
+++ b/catalog/templates/tipResults.html
@@ -37,8 +37,9 @@ No recorded tips
 {% endif %}
 
 </div>
+<a href="{% url 'entertips' %}">
 <div id="backToTipEntry" class="blueBackground yellowBorder2">
-  <img src="{% static 'icons/holeDetailBackYellow.svg'%}">
+  <img src="{% static 'icons/holeDetailBackYellow.svg'%}"></a>
 </div>
 </div>
 
