--- a/catalog/templates/enterSportsTips.html
+++ b/catalog/templates/enterSportsTips.html
@@ -223,8 +223,8 @@
     <div id="toprow">Game 10</div>
     <div id="corerow">
       <div id="leftpanel">
-        <div class="teamImgContainer" id="islandersIMG"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Islanders</div>
+        <div class="teamImgContainer" id="hurricanesIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Hurricanes</div>
       </div>
       <div id="midpanel">
         <img id="sportsIcon" src="{% static 'icons/tipsIcehockeyBlue.svg' %}">
@@ -232,8 +232,8 @@
         <div  id="dateContainer">4/20</div>
       </div>
       <div id="rightpanel">
-        <div class="teamImgContainer" id="penguinsIMG"></div>
-        <div class="indyText blueText bold" id="teamTextContainer">Penguins</div>
+        <div class="teamImgContainer" id="capitalsIMG"></div>
+        <div class="indyText blueText bold" id="teamTextContainer">Capitals</div>
       </div>
     </div>
     <div class="yellowBorder" id="submitrow"> {{form.game10 }} </div>
