--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -821,6 +821,7 @@ input[type=number]::-webkit-outer-spin-button {
   left: 75px;
   height: 30px;
   width: 190px;
+  z-index:100px;
 }
 
 #ctpLabelContainer {
@@ -848,6 +849,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 2px auto;
   -webkit-appearance: none;
   border: 0;
+  z-index: 100;
 }
 
 #id_ld {
