--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -635,6 +635,7 @@ a:link {
   line-height: 57px;
   float: left;
   text-align: center;
+  z-index: 100;
 }
 
 #holeEntryButtonCTPText {
@@ -642,6 +643,7 @@ a:link {
   font-size: 1.75rem;
   line-height: 57px;
   width: 100%;
+  z-index: 100;
 }
 
 #holeEntryButtonCTPIcon {
@@ -821,7 +823,7 @@ input[type=number]::-webkit-outer-spin-button {
   left: 75px;
   height: 30px;
   width: 190px;
-  z-index:100px;
+  z-index:100;
 }
 
 #ctpLabelContainer {
